--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,17 +31,17 @@ jobs:
         uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.2
         with:
           # Github access token token used to deploy on gh_pages. You can find it on Github.
-          github_access_token: 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
+          github_access_token: ${{secrets.GH_ACTION_KEY}}
           # The directory of the angular project, in which all the commands will run
           angular_project_dir: ./algolia-is-example
           # Build configuration for the angular app
-          build_configuration: production
+          # build_configuration: production
           # base href for the app
           base_href: /Algolia_test/
           # branch on which the angular build will be deployed
           deploy_branch: gh-pages
           # The folder in which `ng build` provides its output. This is the folder which will be deployed to the `deploy_branch`.
-          angular_dist_build_folder: dist/algolia-is-example
+          # angular_dist_build_folder: dist/algolia-is-example
           # If the action should run 'ng lint'
           run_lint: false
           # Will not fail the step if anything fails
